--- a/css/main.css
+++ b/css/main.css
@@ -102,6 +102,7 @@ html {
 }
 
 body {
+  background-color: #d3d3d3;
   font-family: 'Source Sans Pro', sans-serif;
   padding: 2em;
   font-size: 1.25em;
@@ -109,22 +110,28 @@ body {
 }
 
 .wrapper {
-  font-weight: 700;
+
+  font-weight: 400;
   display: flex;
   justify-content: space-between;
 }
 
 .div-1, .div-2, .div-3 {
-  /*give the divs a width of 30%, add display:flex, set justify-content and align-items to center*/
   color: #fff;
   line-height: 1.5em;
   font-size: 1.6em;
-  background-color: #f16059;
+  background-color: #d3d3d3;
   height: 300px;
+  margin: 150px 0px;
   display: flex;
   width: 30%;
   justify-content: center;
   align-items: center;
+}
+
+.div-1, .div-2 {
+  border-right: solid  1px white;
+
 }
 
 
